<resources>
    <string name="app_name">Gestor de Proyectos</string>

    <string name="content_description_logo">Logo</string>
    <string name="text_view_login">Iniciar Sesión</string>
    <string name="edit_text_username">Nombre de usuario</string>
    <string name="edit_text_password">Contraseña</string>

    <string name="text_view_login_admin">Entrar como administrador</string>

    <string name="text_view_error_in_login">El usuario y/o la contraseña son incorrectos</string>

    <string name="home_icon_menu">Inicio</string>
    <string name="tasks_icon_menu">Tareas</string>
    <string name="user_icon_menu">Perfil</string>
    <string name="project_text_view">Proyecto</string>
    <string name="nombre">Nombre:</string>
    <string name="tareas">Tareas</string>
    <string name="eliminar_proyecto">Eliminar proyecto</string>
    <string name="bienvenido_de_vuelta">"Bienvenido "</string>
    <string name="tus_proyectos">Tus proyectos</string>
    <string name="tareas_proximas_a_finalizar">Tareas proximas a finalizar</string>
    <string name="tus_tareas">Tus Tareas</string>
    <string name="esta_semana">Esta semana</string>
    <string name="proxima_semana">Próxima semana</string>
    <string name="mas_tarde">Más tarde</string>

    <string-array name="task_states">
        <item>Pendiente</item>
        <item>En progreso</item>
        <item>Completada</item>
    </string-array>
</resources>