<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TaskFragment"
    android:background="@color/beige"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tus_tareas"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/textViewThisWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esta_semana"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewThisWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        />

    <TextView
        android:id="@+id/textViewNextWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proxima_semana"
        android:textSize="30sp"
        android:layout_marginTop="310dp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNextWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        />

    <TextView
        android:id="@+id/textViewLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mas_tarde"
        android:textSize="30sp"
        android:layout_marginTop="550dp"
        android:textStyle="bold"
        />

    <!-- RecyclerView para mostrar las tareas más tarde -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        />
</FrameLayout>
